2008-04-18  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* modulesets/freedesktop-2.24.modules: Add lirc.

	* modulesets/gnome-2.24.modules: Add gnome-lirc-properties.

2008-04-17  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* jhbuild/utils/trayicon.py (TrayIcon.close): Don't break if the
	process does not exists anymore. See #526745.

2008-04-17  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-2.24.modules: Add ldtp.
	* modulesets/gnome-suites-2.24.modules: Use svn trunk for gtkmm.

2008-04-17  John Carr  <john.carr@unrouted.co.uk>

	* modulesets/gnome-2.24.modules:
	* modulesets/gnome-suites-2.24.modules: Add project hamster to
	-proposed.

2008-04-17  John Carr  <john.carr@unrouted.co.uk>

	* modulesets/gnome-2.24.modules:
	* modulesets/gnome-suites-2.24.modules: Add conduit and its external
	dependencies to -proposed.

2008-04-17  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.22.modules: gnome-{desktop,menus,panel} &
	libwnck branched for GNOME 2.22.

2008-04-17  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.24.modules: Removed unused reference to
	svn.webkit.org repository, added devhelp-webkit module (from Alp's
	git repository on ndesk.org).

2008-04-15  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* modulesets/freedesktop-2.14.modules:
	* modulesets/freedesktop-2.24.modules:
	Moved geoclue, gypsy, and swfdec-mozilla.

2008-04-15  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* modulesets/freedesktop.modules: renamed as freedesktop-2.14
	* modulesets/{gnome-2.10.modules,gnome-2.12.modules,gnome-2.14.modules,
	gtk.modules,gtk28.modules}: include freedesktop-2.14. See #524272.

2008-04-15  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/info.py, jhbuild/modtypes/distutils.py,
	jhbuild/versioncontrol/git.py, jhbuild/versioncontrol/mtn.py,
	doc/C/jhbuild.xml: changed jhbuild info to print info on all modules
	when there is no module specified; also fixed issues with getting