@@ -1,3 +1,8 @@
+2008-04-19  Marc-Andre Lureau  <marcandre.lureau@gmail.com>
+
+	* jhbuild/versioncontrol/git.py (GitSvnBranch._checkout): Raise a
+	proper error message when the location is incorrect.
+
 2008-04-18  Marc-Andre Lureau  <marcandre.lureau@gmail.com>
 
 	* modulesets/freedesktop-2.24.modules: Add lirc.
